--- a/CurrencyService/App.config
+++ b/CurrencyService/App.config
@@ -1,6 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
+	<appSettings>
+
+		<add key="format" value="json" />
+		<add key="interval" value="5000" />
+		<add key="filename" value="CurrencyRate" />
+		<add key="url" value="https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?" />
+
+	</appSettings>
 </configuration>
