Created method for getting configuration

--- a/CurrencyService/App.config
+++ b/CurrencyService/App.config
@@ -17,6 +17,7 @@
 		<add key="format" value="json" />
 		<add key="interval" value="5000" />
 		<add key="filename" value="CurrencyRate" />
+		<add key="dirname" value="CurrencyRate" />
 		<add key="url" value="https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?" />
 
 	</appSettings>
