--- a/CurrencyService/packages.config
+++ b/CurrencyService/packages.config
@@ -1,19 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="32.0.3" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyModel" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="Serilog" version="4.0.0" targetFramework="net472" />
+  <package id="Serilog.AspNetCore" version="8.0.1" targetFramework="net472" />
+  <package id="Serilog.Extensions.Hosting" version="8.0.0" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="8.0.0" targetFramework="net472" />
+  <package id="Serilog.Formatting.Compact" version="2.0.0" targetFramework="net472" />
+  <package id="Serilog.Settings.Configuration" version="8.0.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="5.0.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Debug" version="2.0.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="4.4.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.4.3" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="8.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
