--- a/ExchangeService/ExchangeService.csproj
+++ b/ExchangeService/ExchangeService.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2D4667BF-9D4B-4EDF-8DEB-2BC8153FC737}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CurrencyService</RootNamespace>
+    <RootNamespace>ExchangeService</RootNamespace>
     <AssemblyName>ExchangeService</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
