--- a/ExchangeService/App.config
+++ b/ExchangeService/App.config
@@ -57,7 +57,7 @@
 		<add key="format" value="json" />
 		<add key="interval" value="15000" />
 		<add key="filename" value="CurrencyRate" />
-		<add key="dirpath" value="C:\\CurrencyRate" />
+		<add key="dirpath" value="C:\CurrencyRate" />
 		<add key="baseurl" value="https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?" />
 
 	</appSettings>
