add readme file

--- a/ExchangeService/App.config
+++ b/ExchangeService/App.config
@@ -53,12 +53,10 @@
   </runtime>
 
 	<appSettings>
-
 		<add key="format" value="json" />
 		<add key="interval" value="15000" />
-		<add key="filename" value="CurrencyRate" />
-		<add key="dirpath" value="C:\CurrencyRate" />
+		<add key="filename" value="ExchangeRate" />
+		<add key="dirpath" value="C:\ExchangeRate" />
 		<add key="baseurl" value="https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?" />
-
 	</appSettings>
 </configuration>
